[package]
name = "libmll"
version = "0.1.0"
edition = "2024"

[features]
default = []
http = ["dep:chitose"]


[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive", "rc", "serde_derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1"
mustache = "0.9"
mlua = { version = "0.10", features = ["lua54", "vendored", "macros", "serialize", "anyhow"] }
chitose = { version = "0.1", git = "https://github.com/s-aran/chitose.git", branch="main", optional = true }

[dependencies.uuid]
version = "1"
features = ["v4", "fast-rng", "macro-diagnostics"]
