[package]
name = "lqjson"
version = "0.1.0"
edition = "2021"

[dependencies]
liblqjson = {version ="*", path="../"}
clap = { version = "4.5", features = ["derive"] }
liquid = "0.26"
liquid-core = { version = "0.26", features = ["derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
